--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div class="game">
+    <div>Score: <span id="score">0</span></div>
+    <div>Level: <span id="level">0</span></div>
+</div>
+
 <!.. 10x20 ..>
 <div class="main">
-
 </div>
 <script src="script.js"></script>
 </body>
