--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="game">
-    <div>Score: <span id="score">0</span></div>
-    <div>Level: <span id="level">1</span></div>
+<div class="info">
+    <div class="game">
+        <div>Score: <span id="score">0</span></div>
+        <div>Level: <span id="level">1</span></div>
+    </div>
+    <div class="box-for-tetro">
+        <div id="next-tetro"></div>
+    </div>
+
 </div>
 
 <!.. 10x20 ..>
