--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <div class="box-for-tetro">
         <div id="next-tetro"></div>
     </div>
-
+    <button id="start">Start</button>
+    <button id="pause">Pause</button>
 </div>
 
 <!.. 10x20 ..>
